Sidebar: fix color widget dropdown alignment
This - "justify-self: end;" - seems to be an old declaration when we
were attempting fixing alignments by incorrectly aligning everything
to the right -> remove it.

for the majority of ".sidebar.ui-grid.ui-grid-cell .menubutton" that
declaration was rendered inactive (for menu icon buttons) but for the
dropdown (color widget) it was active, resulting in misalignment

1. Open a presentation file
2. Open sidebar
3. In the slide section set the background dropdown to color
4. Notice the misalignment

--- a/browser/css/jssidebar.css
+++ b/browser/css/jssidebar.css
@@ -125,7 +125,6 @@ div.sidebar.ui-grid .checkbutton.sidebar,
 
 .sidebar.ui-grid.ui-grid-cell .menubutton {
 	justify-content: space-between;
-	justify-self: end;
 	padding: 0;
 	margin-right: 1px;
 }
